[gd_scene load_steps=40 format=3 uid="uid://c2bf7ya6qupfv"]

[ext_resource type="Script" path="res://Main/Scenes/UserInterfaceScenes/ReadyUpMenu.gd" id="1_cm1lq"]
[ext_resource type="Texture2D" uid="uid://cl7jgv07t81t3" path="res://Ninja/Assets/IdleSpriteSheet.png" id="2_8a6ki"]
[ext_resource type="Texture2D" uid="uid://dav7s73jog53r" path="res://Ninja/Assets/DashSpriteSheet.png" id="2_ebhs5"]
[ext_resource type="Texture2D" uid="uid://deiupm4nho1yo" path="res://Sumo/Assets/Goblin King Sprite Sheet.png" id="4_sb3kp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_256kt"]
atlas = ExtResource("2_8a6ki")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkmhl"]
atlas = ExtResource("2_8a6ki")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnmoj"]
atlas = ExtResource("2_8a6ki")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x582d"]
atlas = ExtResource("2_8a6ki")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cro1t"]
atlas = ExtResource("2_8a6ki")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_h221b"]
atlas = ExtResource("2_8a6ki")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_23pem"]
atlas = ExtResource("2_8a6ki")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdvrv"]
atlas = ExtResource("2_8a6ki")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqboo"]
atlas = ExtResource("2_8a6ki")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcr4a"]
atlas = ExtResource("2_8a6ki")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnycr"]
atlas = ExtResource("2_ebhs5")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dfyu"]
atlas = ExtResource("2_ebhs5")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jouen"]
atlas = ExtResource("2_ebhs5")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkqjq"]
atlas = ExtResource("2_ebhs5")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_avtf2"]
atlas = ExtResource("2_ebhs5")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ysqu"]
atlas = ExtResource("2_ebhs5")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1abm6"]
atlas = ExtResource("2_ebhs5")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n5nm"]
atlas = ExtResource("2_ebhs5")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtibp"]
atlas = ExtResource("4_sb3kp")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvtmh"]
atlas = ExtResource("4_sb3kp")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt61s"]
atlas = ExtResource("4_sb3kp")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1t6iq"]
atlas = ExtResource("4_sb3kp")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cadt5"]
atlas = ExtResource("4_sb3kp")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_40mwp"]
atlas = ExtResource("4_sb3kp")
region = Rect2(320, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_urjvw"]
atlas = ExtResource("4_sb3kp")
region = Rect2(384, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x210r"]
atlas = ExtResource("4_sb3kp")
region = Rect2(448, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0fnr"]
atlas = ExtResource("4_sb3kp")
region = Rect2(512, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhsy2"]
atlas = ExtResource("4_sb3kp")
region = Rect2(576, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvel1"]
atlas = ExtResource("4_sb3kp")
region = Rect2(640, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gxo0"]
atlas = ExtResource("4_sb3kp")
region = Rect2(704, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mylaf"]
atlas = ExtResource("4_sb3kp")
region = Rect2(768, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mym7"]
atlas = ExtResource("4_sb3kp")
region = Rect2(832, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb0do"]
atlas = ExtResource("4_sb3kp")
region = Rect2(896, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b13jd"]
atlas = ExtResource("4_sb3kp")
region = Rect2(960, 320, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_thipn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_256kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnmoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x582d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cro1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h221b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23pem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdvrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqboo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcr4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnycr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dfyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jouen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkqjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avtf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ysqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1abm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n5nm")
}],
"loop": true,
"name": &"Ninja",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtibp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvtmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt61s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1t6iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cadt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40mwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urjvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x210r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0fnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhsy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvel1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gxo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mylaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mym7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb0do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b13jd")
}],
"loop": true,
"name": &"Sumo",
"speed": 8.0
}]

[node name="ReadyUpMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cm1lq")

[node name="ReadyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 580.0
offset_top = 600.0
offset_right = 708.0
offset_bottom = 631.0
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
text = "Look For Match"
icon_alignment = 1

[node name="CharacterIcon" type="AnimatedSprite2D" parent="."]
position = Vector2(640, 400)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_thipn")
animation = &"Ninja"
frame_progress = 0.330253

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="CharacterSelector" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 603.0
offset_top = 637.0
offset_right = 689.0
offset_bottom = 668.0

[connection signal="item_selected" from="CharacterSelector" to="." method="_on_character_selector_item_selected"]
